# work_that_processor

./: README.md  example_system_report.json  pyproject.toml
.github/workflows/: python-tests.yml
examples/: system_report.json
system_report/: __init__.py  cli.py  gather.py  save.py
system_report/tests/: test_cli.py  test_gather.py
